Fix button alignment

--- a/src/styles/randomizer.scss
+++ b/src/styles/randomizer.scss
@@ -31,7 +31,7 @@ button {
 
   font-size: 120%;
   text-align: center;
-  vertical-align: bottom;
+  vertical-align: middle;
 
   &:hover {
     @media (hover: hover) {
